--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>To-Do-List</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsivo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -27,8 +28,17 @@
             <button id="btn-add">Adicionar</button>
         </div>
     </section>
-
-    <section id="add-tarefas"></section>
+    
+    <section id="add-tarefas">
+        <div class="dv-btns-screen">
+            <button class="btn-full btn-screen" title="Abrir Tela Cheia Das Tarefas">
+                <i class="fa-solid fa-maximize"></i>
+            </button>
+            <button class="btn-exitFull btn-screen" title="Fechar Tela Cheia Das Tarefas">
+                <i class="fa-solid fa-minimize"></i>
+            </button>
+        </div>
+    </section>
 
     <script src="./javascript/script.js"></script>
 </body>
