--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </section>
     
-    <section id="add-tarefas">
+    <main id="container">
         <div class="dv-btns-screen">
             <button class="btn-full btn-screen" title="Abrir Tela Cheia Das Tarefas">
                 <i class="fa-solid fa-maximize"></i>
@@ -38,7 +38,8 @@
                 <i class="fa-solid fa-minimize"></i>
             </button>
         </div>
-    </section>
+        <section id="add-tarefas"></section>
+    </main>
 
     <script src="./javascript/script.js"></script>
 </body>
