--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List Avançado</title>
+    <title>Todo List Advanced</title>
     <link rel="icon" href="./imgs/checklist.png">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/formTodoList.css">
@@ -72,6 +72,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="./javascript/todoList.js"></script>
     <script src="./javascript/screen.js"></script>
-    <script src="./javascript/search.js"></script>
+    <script type="module" src="./javascript/search.js"></script>
 </body>
 </html>
